rpg-maker/target/generated-sources/antlr4/br/ufscar/dc/compiladores/rpg/maker/RpgGramParser.java
// Generated from br\u005Cufscar\dc\compiladores\rpg\maker\RpgGram.g4 by ANTLR 4.7.2
package br.ufscar.dc.compiladores.rpg.maker;

  import br.ufscar.dc.compiladores.rpg.maker.File;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RpgGramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, PalavrasChave=38, 
		Delimitador=39, Abre=40, Fecha=41, Virgula=42, Nome=43, Nivel=44, Mana=45, 
		EncantamentoAtaque=46, EncantamentoCura=47, EncantamentoFuga=48, EncantamentoDefesa=49, 
		Comentario=50, WhiteSpace=51, ErroComentario=52, ANY=53;
	public static final int
		RULE_programa = 0, RULE_corpo = 1, RULE_declaracao_local = 2, RULE_classe = 3, 
		RULE_status = 4, RULE_cmd = 5, RULE_cmdAtaque = 6, RULE_cmdDefenda = 7, 
		RULE_cmdFuja = 8, RULE_cmdCure = 9, RULE_encantamentoAtaque = 10, RULE_encantamentoDefesa = 11, 
		RULE_encantamentoFuga = 12, RULE_encantamentoCura = 13, RULE_encantamentoAtaqueAnimago = 14, 
		RULE_encantamentoDefesaAnimago = 15, RULE_encantamentoFugaAnimago = 16, 
		RULE_encantamentoCuraAnimago = 17, RULE_encantamentoAtaqueEspadachim = 18, 
		RULE_encantamentoDefesaEspadachim = 19, RULE_encantamentoFugaEspadachim = 20, 
		RULE_encantamentoCuraEspadachim = 21, RULE_encantamentoAtaqueNecromante = 22, 
		RULE_encantamentoDefesaNecromante = 23, RULE_encantamentoFugaNecromante = 24, 
		RULE_encantamentoCuraNecromante = 25, RULE_encantamentoAtaquePaladino = 26, 
		RULE_encantamentoDefesaPaladino = 27, RULE_encantamentoFugaPaladino = 28, 
		RULE_encantamentoCuraPaladino = 29, RULE_encantamentoAtaqueBardo = 30, 
		RULE_encantamentoDefesaBardo = 31, RULE_encantamentoFugaBardo = 32, RULE_encantamentoCuraBardo = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "corpo", "declaracao_local", "classe", "status", "cmd", "cmdAtaque", 
			"cmdDefenda", "cmdFuja", "cmdCure", "encantamentoAtaque", "encantamentoDefesa", 
			"encantamentoFuga", "encantamentoCura", "encantamentoAtaqueAnimago", 
			"encantamentoDefesaAnimago", "encantamentoFugaAnimago", "encantamentoCuraAnimago", 
			"encantamentoAtaqueEspadachim", "encantamentoDefesaEspadachim", "encantamentoFugaEspadachim", 
			"encantamentoCuraEspadachim", "encantamentoAtaqueNecromante", "encantamentoDefesaNecromante", 
			"encantamentoFugaNecromante", "encantamentoCuraNecromante", "encantamentoAtaquePaladino", 
			"encantamentoDefesaPaladino", "encantamentoFugaPaladino", "encantamentoCuraPaladino", 
			"encantamentoAtaqueBardo", "encantamentoDefesaBardo", "encantamentoFugaBardo", 
			"encantamentoCuraBardo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'inicio'", "'level'", "'especial'", "'fim'", "'animago'", "'espadachim'", 
			"'necromante'", "'bardo'", "'Paladino'", "'sim'", "'nao'", "'Ataque'", 
			"'('", "')'", "'Defenda'", "'Fuga'", "'Cure'", "'AtaqueAnimago'", "'DefesaAnimago'", 
			"'FugaAnimago'", "'CuraAnimago'", "'AtaqueEspadachim'", "'DefesaEspadachim'", 
			"'FugaEspadachim'", "'CuraEspadachim'", "'AtaqueNecromante'", "'DefesaNecromante'", 
			"'FugaNecromante'", "'CuraNecromante'", "'AtaquePaladino'", "'DefesaPaladino'", 
			"'FugaPaladino'", "'CuraPaladino'", "'AtaqueBardo'", "'DefesaBardo'", 
			"'FugaBardo'", "'CuraBardo'", null, "':'", null, null, "','", null, null, 
			null, null, null, null, null, null, null, "'/*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "PalavrasChave", "Delimitador", "Abre", "Fecha", "Virgula", 
			"Nome", "Nivel", "Mana", "EncantamentoAtaque", "EncantamentoCura", "EncantamentoFuga", 
			"EncantamentoDefesa", "Comentario", "WhiteSpace", "ErroComentario", "ANY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RpgGram.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RpgGramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RpgGramVisitor ) return ((RpgGramVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			corpo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CorpoContext extends ParserRuleContext {
		public List<Declaracao_localContext> declaracao_local() {
			return getRuleContexts(Declaracao_localContext.class);
		}
		public Declaracao_localContext declaracao_local(int i) {
			return getRuleContext(Declaracao_localContext.class,i);
		}
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public CorpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).enterCorpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).exitCorpo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RpgGramVisitor ) return ((RpgGramVisitor<? extends T>)visitor).visitCorpo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CorpoContext corpo() throws RecognitionException {
		CorpoContext _localctx = new CorpoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_corpo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70);
				declaracao_local();
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__14) | (1L << T__15) | (1L << T__16))) != 0)) {
				{
				{
				setState(75);
				cmd();
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_localContext extends ParserRuleContext {
		public TerminalNode Nome() { return getToken(RpgGramParser.Nome, 0); }
		public List<TerminalNode> Delimitador() { return getTokens(RpgGramParser.Delimitador); }
		public TerminalNode Delimitador(int i) {
			return getToken(RpgGramParser.Delimitador, i);
		}
		public ClasseContext classe() {
			return getRuleContext(ClasseContext.class,0);
		}
		public TerminalNode Nivel() { return getToken(RpgGramParser.Nivel, 0); }
		public StatusContext status() {
			return getRuleContext(StatusContext.class,0);
		}
		public Declaracao_localContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_local; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).enterDeclaracao_local(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).exitDeclaracao_local(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RpgGramVisitor ) return ((RpgGramVisitor<? extends T>)visitor).visitDeclaracao_local(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracao_localContext declaracao_local() throws RecognitionException {
		Declaracao_localContext _localctx = new Declaracao_localContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao_local);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__0);
			setState(82);
			match(Nome);
			setState(83);
			match(Delimitador);
			setState(84);
			classe();
			setState(85);
			match(Nivel);
			setState(86);
			match(Delimitador);
			setState(87);
			match(T__1);
			setState(88);
			status();
			setState(89);
			match(Delimitador);
			setState(90);
			match(T__2);
			setState(91);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClasseContext extends ParserRuleContext {
		public ClasseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classe; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).enterClasse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).exitClasse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RpgGramVisitor ) return ((RpgGramVisitor<? extends T>)visitor).visitClasse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClasseContext classe() throws RecognitionException {
		ClasseContext _localctx = new ClasseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classe);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatusContext extends ParserRuleContext {
		public StatusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_status; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).enterStatus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).exitStatus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RpgGramVisitor ) return ((RpgGramVisitor<? extends T>)visitor).visitStatus(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatusContext status() throws RecognitionException {
		StatusContext _localctx = new StatusContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_status);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_la = _input.LA(1);
			if ( !(_la==T__9 || _la==T__10) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdContext extends ParserRuleContext {
		public CmdAtaqueContext cmdAtaque() {
			return getRuleContext(CmdAtaqueContext.class,0);
		}
		public CmdDefendaContext cmdDefenda() {
			return getRuleContext(CmdDefendaContext.class,0);
		}
		public CmdFujaContext cmdFuja() {
			return getRuleContext(CmdFujaContext.class,0);
		}
		public CmdCureContext cmdCure() {
			return getRuleContext(CmdCureContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).enterCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).exitCmd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RpgGramVisitor ) return ((RpgGramVisitor<? extends T>)visitor).visitCmd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cmd);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				cmdAtaque();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				cmdDefenda();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				cmdFuja();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				cmdCure();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdAtaqueContext extends ParserRuleContext {
		public TerminalNode Nome() { return getToken(RpgGramParser.Nome, 0); }
		public List<TerminalNode> Virgula() { return getTokens(RpgGramParser.Virgula); }
		public TerminalNode Virgula(int i) {
			return getToken(RpgGramParser.Virgula, i);
		}
		public List<EncantamentoAtaqueContext> encantamentoAtaque() {
			return getRuleContexts(EncantamentoAtaqueContext.class);
		}
		public EncantamentoAtaqueContext encantamentoAtaque(int i) {
			return getRuleContext(EncantamentoAtaqueContext.class,i);
		}
		public CmdAtaqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdAtaque; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).enterCmdAtaque(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).exitCmdAtaque(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RpgGramVisitor ) return ((RpgGramVisitor<? extends T>)visitor).visitCmdAtaque(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdAtaqueContext cmdAtaque() throws RecognitionException {
		CmdAtaqueContext _localctx = new CmdAtaqueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cmdAtaque);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__11);
			setState(104);
			match(T__12);
			setState(105);
			match(Nome);
			setState(108); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(106);
				match(Virgula);
				setState(107);
				encantamentoAtaque();
				}
				}
				setState(110); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Virgula );
			setState(112);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdDefendaContext extends ParserRuleContext {
		public TerminalNode Nome() { return getToken(RpgGramParser.Nome, 0); }
		public List<TerminalNode> Virgula() { return getTokens(RpgGramParser.Virgula); }
		public TerminalNode Virgula(int i) {
			return getToken(RpgGramParser.Virgula, i);
		}
		public List<EncantamentoDefesaContext> encantamentoDefesa() {
			return getRuleContexts(EncantamentoDefesaContext.class);
		}
		public EncantamentoDefesaContext encantamentoDefesa(int i) {
			return getRuleContext(EncantamentoDefesaContext.class,i);
		}
		public CmdDefendaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdDefenda; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).enterCmdDefenda(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).exitCmdDefenda(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RpgGramVisitor ) return ((RpgGramVisitor<? extends T>)visitor).visitCmdDefenda(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdDefendaContext cmdDefenda() throws RecognitionException {
		CmdDefendaContext _localctx = new CmdDefendaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cmdDefenda);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__14);
			setState(115);
			match(T__12);
			setState(116);
			match(Nome);
			setState(119); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(117);
				match(Virgula);
				setState(118);
				encantamentoDefesa();
				}
				}
				setState(121); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Virgula );
			setState(123);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdFujaContext extends ParserRuleContext {
		public TerminalNode Nome() { return getToken(RpgGramParser.Nome, 0); }
		public List<TerminalNode> Virgula() { return getTokens(RpgGramParser.Virgula); }
		public TerminalNode Virgula(int i) {
			return getToken(RpgGramParser.Virgula, i);
		}
		public List<EncantamentoFugaContext> encantamentoFuga() {
			return getRuleContexts(EncantamentoFugaContext.class);
		}
		public EncantamentoFugaContext encantamentoFuga(int i) {
			return getRuleContext(EncantamentoFugaContext.class,i);
		}
		public CmdFujaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdFuja; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).enterCmdFuja(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).exitCmdFuja(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RpgGramVisitor ) return ((RpgGramVisitor<? extends T>)visitor).visitCmdFuja(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdFujaContext cmdFuja() throws RecognitionException {
		CmdFujaContext _localctx = new CmdFujaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cmdFuja);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T__15);
			setState(126);
			match(T__12);
			setState(127);
			match(Nome);
			setState(130); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(128);
				match(Virgula);
				setState(129);
				encantamentoFuga();
				}
				}
				setState(132); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Virgula );
			setState(134);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdCureContext extends ParserRuleContext {
		public TerminalNode Nome() { return getToken(RpgGramParser.Nome, 0); }
		public List<TerminalNode> Virgula() { return getTokens(RpgGramParser.Virgula); }
		public TerminalNode Virgula(int i) {
			return getToken(RpgGramParser.Virgula, i);
		}
		public List<EncantamentoCuraContext> encantamentoCura() {
			return getRuleContexts(EncantamentoCuraContext.class);
		}
		public EncantamentoCuraContext encantamentoCura(int i) {
			return getRuleContext(EncantamentoCuraContext.class,i);
		}
		public CmdCureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdCure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).enterCmdCure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).exitCmdCure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RpgGramVisitor ) return ((RpgGramVisitor<? extends T>)visitor).visitCmdCure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdCureContext cmdCure() throws RecognitionException {
		CmdCureContext _localctx = new CmdCureContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cmdCure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__16);
			setState(137);
			match(T__12);
			setState(138);
			match(Nome);
			setState(141); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(139);
				match(Virgula);
				setState(140);
				encantamentoCura();
				}
				}
				setState(143); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Virgula );
			setState(145);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EncantamentoAtaqueContext extends ParserRuleContext {
		public EncantamentoAtaqueAnimagoContext encantamentoAtaqueAnimago() {
			return getRuleContext(EncantamentoAtaqueAnimagoContext.class,0);
		}
		public EncantamentoAtaqueEspadachimContext encantamentoAtaqueEspadachim() {
			return getRuleContext(EncantamentoAtaqueEspadachimContext.class,0);
		}
		public EncantamentoAtaqueNecromanteContext encantamentoAtaqueNecromante() {
			return getRuleContext(EncantamentoAtaqueNecromanteContext.class,0);
		}
		public EncantamentoAtaqueBardoContext encantamentoAtaqueBardo() {
			return getRuleContext(EncantamentoAtaqueBardoContext.class,0);
		}
		public EncantamentoAtaquePaladinoContext encantamentoAtaquePaladino() {
			return getRuleContext(EncantamentoAtaquePaladinoContext.class,0);
		}
		public EncantamentoAtaqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_encantamentoAtaque; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RpgGramListener ) ((RpgGramListener)listener).enterEncantamentoAtaque(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
